--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceDbConnection": "Data Source = ServiceDatabase.sqlite"
 }
