Fix database issue, always copy it to the output directory

--- a/concert-booking-service-csharp.csproj
+++ b/concert-booking-service-csharp.csproj
@@ -26,4 +26,10 @@
     <Folder Include="Medias\Images\Performers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ServiceDatabase.sqlite">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
